@@ -1,7 +1,9 @@
 // Copyright 2002-2013, University of Colorado Boulder
 
 /**
- * Model for the 'Basics' screen.
+ * Model for the 'Solutions' screen.
+ * This is essentially the 'Basics' model with a different user-interface on it.
+ * The 'Basics' model also has a pHMeter model element, which we'll simply ignore.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -9,86 +11,18 @@ define( function( require ) {
   'use strict';
 
   // imports
-  var Beaker = require( 'PH_SCALE/common/model/Beaker' );
+  var BasicsModel = require( 'PH_SCALE/basics/model/BasicsModel' );
   var Bounds2 = require( 'DOT/Bounds2' );
-  var Dimension2 = require( 'DOT/Dimension2' );
-  var Dropper = require( 'PH_SCALE/common/model/Dropper' );
-  var Faucet = require( 'PH_SCALE/common/model/Faucet' );
-  var Solute = require( 'PH_SCALE/common/model/Solute' );
-  var Solution = require( 'PH_SCALE/common/model/Solution' );
-  var Vector2 = require( 'DOT/Vector2' );
-  var Water = require( 'PH_SCALE/common/model/Water' );
+  var inherit = require( 'PHET_CORE/inherit' );
 
   function SolutionsModel() {
 
-    var thisModel = this;
+    BasicsModel.call( this );
 
-    // solute choices, in order that they'll appear in the combo box
-    thisModel.solutes = [
-      Solute.DRAIN_CLEANER,
-      Solute.HAND_SOAP,
-      Solute.BLOOD,
-      Solute.SPIT,
-      Solute.MILK,
-      Solute.CHICKEN_SOUP,
-      Solute.COFFEE,
-      Solute.BEER,
-      Solute.SODA,
-      Solute.VOMIT,
-      Solute.BATTERY_ACID
-    ];
-
-    thisModel.water = Water;
-
-    // Beaker, everything else is positioned relative to it. Offset constants were set by visual inspection.
-    thisModel.beaker = new Beaker( new Vector2( 750, 580 ), new Dimension2( 450, 300 ) );
-
-    // Dropper above the beaker
-    var yDropper = thisModel.beaker.location.y - thisModel.beaker.size.height - 15;
-    thisModel.dropper = new Dropper( Solute.CHICKEN_SOUP,
-      new Vector2( thisModel.beaker.location.x - 50, yDropper ),
-      new Bounds2( thisModel.beaker.left + 120, yDropper, thisModel.beaker.right - 170, yDropper ) );
-
-    // Solution in the beaker
-    thisModel.solution = new Solution( thisModel.dropper.soluteProperty, 0, thisModel.water, 0, thisModel.beaker.volume );
-
-    // Water faucet at the beaker's top-right
-    thisModel.waterFaucet = new Faucet( new Vector2( thisModel.beaker.right - 50, thisModel.beaker.location.y - thisModel.beaker.size.height - 45 ),
-      thisModel.beaker.right + 400,
-      { enabled: thisModel.solution.volumeProperty.get() < thisModel.beaker.volume } );
-
-    // Drain faucet at the beaker's bottom-left.
-    thisModel.drainFaucet = new Faucet( new Vector2( thisModel.beaker.left - 75, thisModel.beaker.location.y + 43 ), thisModel.beaker.left,
-      { enabled: thisModel.solution.volumeProperty.get() > 0 } );
-
-    // Enable faucets and dropper based on amount of solution in the beaker.
-    thisModel.solution.volumeProperty.link( function( volume ) {
-      thisModel.waterFaucet.enabledProperty.set( volume < thisModel.beaker.volume );
-      thisModel.drainFaucet.enabledProperty.set( volume > 0 );
-      thisModel.dropper.enabledProperty.set( volume < thisModel.beaker.volume );
-    } );
+    // adjust the drag bounds of the dropper to account for different user-interface constraints
+    var yDropper = this.dropper.locationProperty.get().y;
+    this.dropper.dragBounds = new Bounds2( this.beaker.left + 120, yDropper, this.beaker.right - 170, yDropper );
   }
 
-  SolutionsModel.prototype = {
-
-    reset: function() {
-      this.beaker.reset();
-      this.dropper.reset();
-      this.solution.reset();
-      this.waterFaucet.reset();
-      this.drainFaucet.reset();
-    },
-
-    /*
-     * Moves time forward by the specified amount.
-     * @param deltaSeconds clock time change, in seconds.
-     */
-    step: function( deltaSeconds ) {
-      this.solution.addSolute( this.dropper.flowRateProperty.get() * deltaSeconds );
-      this.solution.addWater( this.waterFaucet.flowRateProperty.get() * deltaSeconds );
-      this.solution.drainSolution( this.drainFaucet.flowRateProperty.get() * deltaSeconds );
-    }
-  };
-
-  return SolutionsModel;
+  return inherit( BasicsModel, SolutionsModel );
 } );
